[package]
authors = ["Nautilus Cyberneering <info@nautilus-cyberneering.de>, Mick van Dijke <mick@dutchbits.nl>"]
categories = ["library"]
description = "A library to provide error decorator with the location and the source of the original error."
documentation = "https://docs.rs/torrust-located-error/"
edition = "2024"
homepage = "https://torrust.com/"
keywords = ["errors", "helper", "library"]
license = "AGPL-3.0-only"
name = "torrust-located-error"
publish = true
readme = "README.md"
repository = "https://github.com/torrust/torrust-located-error"
rust-version = "1.88"
version = "3.0.0"

[dependencies]
tracing = "0"

[dev-dependencies]
thiserror = "2"
